--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -14,9 +14,15 @@
       <div class="card" aria-hidden="true">
         <div class="card-body">
           <h5>{{ experiencia.titulo }}</h5>
-          <p>{{ experiencia.area }}</p>
-          <p>Inicio: {{ experiencia.desde }}</p>
-          <p>Fin: {{ experiencia.hasta }}</p>
+          <p>{{ experiencia.fecha }}</p>
+          <p>Inicio: {{ experiencia.urlCertificado }}</p>
+          <div class="box-shadow">
+            <img
+              class="img-fluid rounded"
+              [src]="experiencia.urlFotoCertificado"
+              alt="lucho"
+            />
+          </div>
           <div *ngIf="modoEdit" class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary" routerLink="/Editar-experiencia/{{experiencia.id}}">
               <i class="fa-solid fa-pen"></i>
