--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,4 +1,4 @@
-<section id="proyectos" class="section gray-bg">
+<!-- <section id="proyectos" class="section gray-bg">
   <div class="row">
     <h2 class="h3 text-center titulo">Proyectos</h2>
     <div *ngIf="modoEdit" class="agregar-eliminar">
@@ -33,3 +33,4 @@
     </li>
   </div>
 </section>
+ -->
