--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -1,12 +1,17 @@
+/* ----------FONDO DEL INICIO----------- */
 .inicio { 
     width: 100%;
-    min-height: 100vh;
-    background-image: url(../../../assets/imagenes/Fondo-Header.jpg);
+    min-height: 60vh;
+    background-image: url(../../../assets/imagenes/banner.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.btn-sabermas{
-    padding: 7px 12px;
+/* ----------TITULO DEL INICIO----------- */
+.titulo-inicio{
+    color: white;
 }
