--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,29 +1,5 @@
-<section class="min-vh-100 d-flex inicio">
-  <div class="container align-self-center">
-    <div class="row">
-      <div class="col-lg-10 col-xl-9 mx-auto text-center text-white">
-        <h1 class="mb-5">LUCIANO PAULUCCI</h1>
-        <h2 class="mb-5">BIENVENIDO</h2>
-        <div class="dropdown">
-          <button
-            class="btn btn-secondary dropdown-toggle"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            SABER MAS
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#acerca-de">Acerca de mi</a></li>
-            <li>
-              <a class="dropdown-item" href="#experiencia">Experiencia</a>
-            </li>
-            <li><a class="dropdown-item" href="#educacion">Educacion</a></li>
-            <li><a class="dropdown-item" href="#skills">Habilidades</a></li>
-            <li><a class="dropdown-item" href="#proyectos">Proyectos</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+<div class="inicio">
+  <div class="contenedor-titulo">
+    <h1 class="titulo-inicio">BIENVENIDO</h1>
   </div>
-</section>
+</div>
